some swagger docs fix
